src/objects/TR1__Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Amount_Left__c</fullName>
        <formula>TR1__Amount__c - TR1__Total_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__PO_Reason__c</fullName>
        <label>PO Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Spend__c</fullName>
        <label>Total Spend</label>
        <summarizedField>TR1__Purchase_Order_Spend__c.TR1__Spend_Amount__c</summarizedField>
        <summaryForeignKey>TR1__Purchase_Order_Spend__c.TR1__Purchase_Order_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>